Chore: Fix build with current toolchain

--- a/demo1/CMakeLists.txt
+++ b/demo1/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.10)
 
 add_executable(demo1 Color.cpp PingPongStrip.cpp main.cpp)
-target_link_libraries(demo1 rpi-many-ws2812b)
+target_link_libraries(demo1 rpi-many-ws2812b -static)
